# smucalc

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
cmake/: CompileOptions.cmake
res/: history
src/: CMakeLists.txt
src/calc/: CMakeLists.txt
src/calc/calc/: calc.cpp  calc.hpp
src/debug/: CMakeLists.txt
src/debug/debug/: debug.cpp  debug.hpp
src/lexer/: CMakeLists.txt
src/lexer/lexer/: lexer.cpp  lexer.hpp
src/rational/: CMakeLists.txt
src/rational/rational/: rational.cpp  rational.hpp
src/smucalc/: CMakeLists.txt
src/smucalc/smucalc/: main.cpp
src/syntaxer/: CMakeLists.txt
src/syntaxer/syntaxer/: syntaxer.cpp  syntaxer.hpp
src/wrl/: CMakeLists.txt
src/wrl/wrl/: history.cpp  history.hpp  tic.cpp  tic.hpp  wrl.cpp  wrl.hpp
tests/rational/: CMakeLists.txt
tests/rational/rational/: rational.cpp
